[package]
name = "tack"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["color", "derive"] }
k8s-openapi = { version = "0.27.1", features = ["v1_31"] }
kube = "3.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
skim = "4.6.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros"] }
dirs = "6.0.0"
toml = "1.1.2"
